--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ button:hover {
 
 #fetchContasBtn {
     background-color: #007BFF;
-    margin-top: 20px;
+    margin-top: 1px;
 }
 
 #fetchContasBtn:hover {
@@ -65,6 +65,10 @@ button:hover {
 ul {
     list-style-type: none;
     padding: 0;
+    max-height: 230px; 
+    overflow-y: auto;
+    border: 1px solid #ddd;
+    border-radius: 5px;
 }
 
 li {
