--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     background-color: #f5f5f5;
 }
 
+.title {
+    font-weight: bold;
+    font-style: normal;
+}
+
 .container {
     width: 100%;
     max-width: 600px;
@@ -87,6 +92,7 @@ li {
     border-radius: 5px;
     background-color: #f9f9f9;
     white-space: pre-line;
+    font-size: 14px;
 }
 
 li span {
